# opengl-skeleton

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  emscripten_build.bat  emscripten_launch.bat  goalsAndReferences.txt  update_all.sh
embuild/: index.html
include/: BasicShader.h  Camera.h  Cube.h  DebugUi.h  DirLight.h  GBuffer.h  Input.h  Mesh.h  PointLight.h  Quad.h  ShaderProgram.h  SpotLight.h  Texture.h  Transformation.h  Window.h  common.h
include/graphics/: Color.h  Model.h  Shader.h
include/graphics/environment/: BaseLight.h  DirLight.h  PointLight.h  ShadowMap.h  SpotLight.h
include/graphics/shaders/: DefaultShader.h
lib/soil/src/: SOIL.c
res/: Mandible.mtl
res/models/: Clara.io.url  Crate.mtl  mandible_new.mtl
res/models/Chocobo/: 0053_player14out.dae  0053_player14out.smd  chocobo.mtl
res/models/Mandragora/: 0075_player50out.dae  0075_player50out.smd
res/models/Vivi/: 0044_player05out.dae  0044_player05out.smd
res/models/head/: NormalMap-Online.url
res/shaders/: basic.frag  basic.vert  basicShader.es2.frag  basicShader.es2.vert  basicShader.frag  basicShader.vert  debugShader.frag  debugShader.vert  depth.frag  depthShader.frag  depthShader.vert  edge.frag  forward.frag  forward.vert  framebuffer.frag  gizmo.frag  gizmo.vert  gscene1.frag  gscene1.vert  lampShader.frag  lampShader.vert  lightShader.vert  scene1.vert  scene2.frag  scene2.vert  scene3.frag  scene3.vert  scene4.frag  scene4.vert  scene5.frag  scene6.frag  screenShader.vert  sobel.frag  sobel.vert  ssao.frag  ssao_blur.frag  ssao_geometry.frag  ssao_geometry.vert  ssao_lighting.frag  waterShader.frag  (+1 more)
res/shaders/common/: common.frag  common.vert
res/shaders/rb/: triangles.frag  triangles.vert
simplefilewatcher/OgreDemo/: OgreDemo.cpp  ReadMe.txt  premake4.lua
simplefilewatcher/OgreDemo/Media/: Blue.bat  Green.bat  Red.bat
simplefilewatcher/OgreDemo/vs2005/: OgreDemo.sln  OgreDemo.vcproj
simplefilewatcher/OgreDemo/vs2008/: OgreDemo.sln  OgreDemo.vcproj
src/: BasicShader.cpp  DebugUi.cpp  GBuffer.cpp  Input.cpp  Mesh.cpp  Texture.cpp  Window.cpp  common.h  main.cpp
src/components/: Transform.h  Transformation.h
src/core/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Input.cpp  Input.h  Octree.cpp  Octree.h  Timer.cpp  Timer.h  Util.cpp  Util.h  assimp.h
src/entities/: Camera.cpp  Camera.h  Cube.h  Entity.h  Quad.h  Transformation.h
src/graphic/imgui/: imgui_impl_sdl.cpp
src/graphics/: BasicRenderer.cpp  BasicRenderer.h  BasicShader.cpp  BasicShader.h  Camera.h  Color.h  DebugUi.cpp  DebugUi.h  DeferredRenderer.cpp  DeferredRenderer.h  DeferredScene.cpp  DirLight.h  DirectionalLight.h  Entity.h  EntityRenderer.cpp  EntityRenderer.h  ForwardRenderer.cpp  ForwardRenderer.h  ForwardScene.cpp  ForwardScene.h  FrameBuffer.cpp  FrameBuffer.h  GBuffer.cpp  GBuffer.h  GL.h  Light.h  Loader.cpp  Loader.h  MasterRenderer.cpp  MasterRenderer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OBJLoader.cpp  OBJLoader.h  PointLight.h  RawModel.cpp  RawModel.h  Scene.h  (+15 more)
src/graphics/imgui/: imgui.h  imgui_impl_sdlogl3.cpp
src/graphics/models/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/graphics/shaders/: BasicShader.cpp  BasicShader.h  ShaderProgram.cpp  ShaderProgram.h
src/graphics/textures/: Material.h  ModelTexture.h  Texture.cpp  Texture.h
src/imgui/: imgui.cpp  imgui_impl_sdl_gl3.cpp  imgui_impl_sdlems.cpp  imgui_impl_sdlogl3.cpp
src/scenes/: BoidsScene2D.cpp  BoidsScene2D.h  DeferredScene.h  ForwardScene.cpp  ForwardScene.h  GScene1.cpp  GScene1.h  Scene.h  Scene1.cpp  Scene1.h  Scene2.cpp  Scene2.h  Scene3.cpp  Scene3.h  Scene4.cpp  Scene4.h  Scene5.cpp  Scene5.h  Scene6.cpp  Scene6.h
src/scenes/RedBook/: RBScene1.cpp  RBScene1.h
src/utils/: DebugUi.cpp  DebugUi.h  Maths.cpp  Maths.h
